--- a/commands.ini
+++ b/commands.ini
@@ -1,14 +1,16 @@
 [UTIL]
-ALIVE = "Yes, I'm alive!"
-
-;HELP = "Dummy text"
-;INFO = "Dummy text"
-;UNKNOWN = "Unknown command!"
+ALIVE = Yes, I'm alive!
+HELP = The commands available are: Alive, Info, Discord, Social, Socials, Help, and Commands!
+INFO = Hello there! I am N0-L, Noelle's cheery helper-bot! I am written in Python3 and am currently still in development! Please be patient with me as my mom adds new functionality to my code!
+UNKNOWN = Unknown command!
 
 ;[DDO]
-;BUILD1 = "Dummy text"
-;BUILD2 = "Dummy text"
+;BUILD = "Dummy text"
+;COUPON = "Dummy text"
+;LAG = "Lag? In DDO? You must have a bad connection, have you tried using wi-fi?"
 
-;[SOCIAL]
-;DISCORD1 = "Dummy text"
-;DISCORD2 = "Dummy text"
+
+[SOCIAL]
+DISCORD = Join us on discord and chat about stream, gaming, or anything else your nerdy heart desires! discord.gg/bmBMGKvDzb
+SOCIAL = Be sure to check out Noelle's social links and more at https://noelleday.carrd.co/ to stay up to date on what's going on!
+SOCIALS = Be sure to check out Noelle's social links and more at https://noelleday.carrd.co/ to stay up to date on what's going on!
